--- a/track.html
+++ b/track.html
@@ -106,20 +106,20 @@
     <div class="wrap">
       <div class="nav">
         <div class="brand" aria-label="INFINITEX">
-          <a href="index.html" aria-label="الرئيسية"><img src="assets/brands/infinitex-logo.png" alt="INFINITEX" /></a>
-          <span class="chip" id="ix-afterSalesChip"><span class="dot"></span> خدمات ما بعد البيع</span>
+          <a href="index.html" aria-label="الرئيسية"><img src="assets/brands/infinitex-logo.png" alt="INFINITEX" data-ix-src="global.media.infinitexLogo" /></a>
+          <span class="chip" id="ix-afterSalesChip" data-ix-chip="global.chipAfterSales"><span class="dot"></span> خدمات ما بعد البيع</span>
         </div>
 
         <nav class="navlinks" aria-label="التنقل">
-          <a href="index.html">الرئيسية</a>
-          <a class="active" href="track.html">تتبع الطلب</a>
-          <a href="returns.html">الاسترجاع</a>
-          <a href="products.html">المنتجات</a>
+          <a href="index.html" data-ix-text="global.nav.home">الرئيسية</a>
+          <a class="active" href="track.html" data-ix-text="global.nav.track">تتبع الطلب</a>
+          <a href="returns.html" data-ix-text="global.nav.returns">الاسترجاع</a>
+          <a href="products.html" data-ix-text="global.nav.products">المنتجات</a>
         </nav>
 
         <div class="navCtas">
-          <a class="btn ghost" href="https://infinitex.sa/blogs/gold-warranty-policy" target="_blank" rel="noopener">سياسة الضمان الذهبي</a>
-          <a class="btn primary" href="https://infinitex.sa/" target="_blank" rel="noopener">المتجر</a>
+          <a class="btn ghost" href="https://infinitex.sa/blogs/gold-warranty-policy" target="_blank" rel="noopener" data-ix-href="global.links.warrantyPolicy" data-ix-text="global.nav.policy">سياسة الضمان الذهبي</a>
+          <a class="btn primary" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-text="global.nav.store">المتجر</a>
         </div>
       </div>
     </div>
@@ -127,22 +127,22 @@
 
   <main class="wrap hero">
     <section class="heroCard card">
-      <div class="chip" id="ix-track-badge" style="position:relative"><span class="dot"></span> تتبع فوري بالذكاء الاصطناعي</div>
-      <h1 class="h1" id="ix-track-title">تتبع طلبك مباشرة<br/>اكتب رقم الطلب وخلاص</h1>
-      <p class="p" id="ix-track-desc">اكتب رقم الطلب بالأسفل. الوكيل مربوط عندنا ويعطيك تفاصيل التتبع فورًا داخل نفس الصفحة.</p>
+      <div class="chip" id="ix-track-badge" style="position:relative" data-ix-chip="pages.track.badge"><span class="dot"></span> تتبع فوري بالذكاء الاصطناعي</div>
+      <h1 class="h1" id="ix-track-title" data-ix-html="pages.track.title">تتبع طلبك مباشرة<br/>اكتب رقم الطلب وخلاص</h1>
+      <p class="p" id="ix-track-desc" data-ix-text="pages.track.desc">اكتب رقم الطلب بالأسفل. الوكيل مربوط عندنا ويعطيك تفاصيل التتبع فورًا داخل نفس الصفحة.</p>
 
       <div class="inlineChat card">
         <div id="chatLog" class="chatLog" aria-live="polite">
-          <div class="msg bot">أهلاً! اكتب رقم طلبك وسأرسل لك حالة الشحنة ورقم التتبع والرابط إن وجد.</div>
+          <div class="msg bot" id="ix-track-intro" data-ix-text="pages.track.intro">أهلاً! اكتب رقم طلبك وسأرسل لك حالة الشحنة ورقم التتبع والرابط إن وجد.</div>
         </div>
 
         <div class="chatRow">
-          <input id="order" name="order" inputmode="numeric" placeholder="رقم الطلب (مثال: 12345)" aria-label="رقم الطلب" />
-          <button class="btn primary" type="button" id="sendBtn">تتبع</button>
+          <input id="order" name="order" inputmode="numeric" placeholder="رقم الطلب (مثال: 12345)" aria-label="رقم الطلب" data-ix-placeholder="pages.track.orderPlaceholder" />
+          <button class="btn primary" type="button" id="sendBtn" data-ix-text="pages.track.cta">تتبع</button>
         </div>
 
-        <div class="hint" id="ix-track-hint">إذا عندك أي استفسار إضافي، تقدر تفتح الشات من أيقونة خدمة العملاء في يمين الشاشة.</div>
-        <a class="miniLink" href="#" id="openWidgetLink">فتح شات خدمة العملاء</a>
+        <div class="hint" id="ix-track-hint" data-ix-text="pages.track.hint">إذا عندك أي استفسار إضافي، تقدر تفتح الشات من أيقونة خدمة العملاء في يمين الشاشة.</div>
+        <a class="miniLink" href="#" id="openWidgetLink" data-ix-text="pages.track.openChat">فتح شات خدمة العملاء</a>
       </div>
     </section>
   </main>
@@ -157,11 +157,11 @@
 
   <div class="mobileNav" role="navigation" aria-label="تنقل سريع">
     <div class="mobileNavBar">
-      <a class="mnItem" href="index.html">خدمات</a>
-      <a class="mnItem active" href="track.html">تتبع</a>
-      <a class="mnItem" href="returns.html">استرجاع</a>
-      <a class="mnItem" href="products.html">منتجات</a>
-      <a class="mnItem store" href="https://infinitex.sa/" target="_blank" rel="noopener">متجر</a>
+      <a class="mnItem" href="index.html" data-ix-text="global.mobileNav.services">خدمات</a>
+      <a class="mnItem active" href="track.html" data-ix-text="global.mobileNav.track">تتبع</a>
+      <a class="mnItem" href="returns.html" data-ix-text="global.mobileNav.returns">استرجاع</a>
+      <a class="mnItem" href="products.html" data-ix-text="global.mobileNav.products">منتجات</a>
+      <a class="mnItem store" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-text="global.mobileNav.store">متجر</a>
     </div>
   </div>
 
