Secure admin page access

--- a/index.html
+++ b/index.html
@@ -219,15 +219,15 @@
         </div>
 
         <nav class="navlinks" aria-label="التنقل">
-          <a class="active" href="index.html" data-ix-text="global.nav.home">الرئيسية</a>
-          <a href="track.html" data-ix-text="global.nav.track">تتبع الطلب</a>
-          <a href="returns.html" data-ix-text="global.nav.returns">الاسترجاع</a>
-          <a href="products.html" data-ix-text="global.nav.products">المنتجات</a>
+          <a class="active" href="index.html" data-ix-text="global.nav.home" data-ix-permission="permissions.showHome">الرئيسية</a>
+          <a href="track.html" data-ix-text="global.nav.track" data-ix-permission="permissions.showTrack">تتبع الطلب</a>
+          <a href="returns.html" data-ix-text="global.nav.returns" data-ix-permission="permissions.showReturns">الاسترجاع</a>
+          <a href="products.html" data-ix-text="global.nav.products" data-ix-permission="permissions.showProducts">المنتجات</a>
         </nav>
 
         <div class="navCtas">
-          <a class="btn ghost" href="https://infinitex.sa/blogs/gold-warranty-policy" target="_blank" rel="noopener" data-ix-href="global.links.warrantyPolicy" data-ix-text="global.nav.policy">سياسة الضمان الذهبي</a>
-          <a class="btn primary" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-text="global.nav.store">المتجر</a>
+          <a class="btn ghost" href="https://infinitex.sa/blogs/gold-warranty-policy" target="_blank" rel="noopener" data-ix-href="global.links.warrantyPolicy" data-ix-text="global.nav.policy" data-ix-permission="permissions.showPolicyCta">سياسة الضمان الذهبي</a>
+          <a class="btn primary" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-text="global.nav.store" data-ix-permission="permissions.showStoreCta">المتجر</a>
         </div>
       </div>
     </div>
@@ -242,7 +242,7 @@
           <p class="p" id="ix-index-desc" data-ix-text="pages.index.desc">هذا الموقع مخصص لخدمات ما بعد البيع: تتبع الطلب، الاسترجاع، ومتابعة المنتجات. إذا تبغى الشراء مباشرة، الزر يوديك على المتجر الرسمي.</p>
 
           <div class="steps" aria-label="الخطوات الثلاث">
-            <div class="step card">
+            <div class="step card" data-ix-permission="permissions.showTrack">
               <div class="stepTop">
                 <div style="display:flex; gap:10px; align-items:flex-start">
                   <span class="stepNum">1</span>
@@ -253,12 +253,12 @@
                 </div>
               </div>
               <div class="stepActions">
-                <a class="btn primary" href="track.html" data-ix-text="pages.index.ctaTrack">ابدأ التتبع</a>
-                <a class="btn ghost" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store">فتح المتجر</a>
+                <a class="btn primary" href="track.html" data-ix-text="pages.index.ctaTrack" data-ix-permission="permissions.showTrack">ابدأ التتبع</a>
+                <a class="btn ghost" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-permission="permissions.showStoreCta">فتح المتجر</a>
               </div>
             </div>
 
-            <div class="step card">
+            <div class="step card" data-ix-permission="permissions.showReturns">
               <div class="stepTop">
                 <div style="display:flex; gap:10px; align-items:flex-start">
                   <span class="stepNum">2</span>
@@ -269,12 +269,12 @@
                 </div>
               </div>
               <div class="stepActions">
-                <a class="btn primary" href="returns.html" data-ix-text="pages.index.ctaReturns">بدء الاسترجاع</a>
-                <a class="btn ghost" href="https://infinitex.sa/blogs/gold-warranty-policy" target="_blank" rel="noopener" data-ix-href="global.links.warrantyPolicy" data-ix-text="global.nav.policy">سياسة الضمان</a>
+                <a class="btn primary" href="returns.html" data-ix-text="pages.index.ctaReturns" data-ix-permission="permissions.showReturns">بدء الاسترجاع</a>
+                <a class="btn ghost" href="https://infinitex.sa/blogs/gold-warranty-policy" target="_blank" rel="noopener" data-ix-href="global.links.warrantyPolicy" data-ix-text="global.nav.policy" data-ix-permission="permissions.showPolicyCta">سياسة الضمان</a>
               </div>
             </div>
 
-            <div class="step card">
+            <div class="step card" data-ix-permission="permissions.showProducts">
               <div class="stepTop">
                 <div style="display:flex; gap:10px; align-items:flex-start">
                   <span class="stepNum">3</span>
@@ -285,8 +285,8 @@
                 </div>
               </div>
               <div class="stepActions">
-                <a class="btn primary" href="products.html">عرض المنتجات</a>
-                <a class="btn ghost" href="products.html#gold">الضمان الذهبي</a>
+                <a class="btn primary" href="products.html" data-ix-permission="permissions.showProducts">عرض المنتجات</a>
+                <a class="btn ghost" href="products.html#gold" data-ix-permission="permissions.showProducts">الضمان الذهبي</a>
               </div>
             </div>
           </div>
@@ -312,11 +312,11 @@
   <!-- Mobile Nav -->
   <div class="mobileNav" role="navigation" aria-label="تنقل سريع">
     <div class="mobileNavBar">
-      <a class="mnItem active" href="index.html" data-ix-text="global.mobileNav.services">خدمات</a>
-      <a class="mnItem" href="track.html" data-ix-text="global.mobileNav.track">تتبع</a>
-      <a class="mnItem" href="returns.html" data-ix-text="global.mobileNav.returns">استرجاع</a>
-      <a class="mnItem" href="products.html" data-ix-text="global.mobileNav.products">منتجات</a>
-      <a class="mnItem store" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-text="global.mobileNav.store">متجر</a>
+      <a class="mnItem active" href="index.html" data-ix-text="global.mobileNav.services" data-ix-permission="permissions.showHome">خدمات</a>
+      <a class="mnItem" href="track.html" data-ix-text="global.mobileNav.track" data-ix-permission="permissions.showTrack">تتبع</a>
+      <a class="mnItem" href="returns.html" data-ix-text="global.mobileNav.returns" data-ix-permission="permissions.showReturns">استرجاع</a>
+      <a class="mnItem" href="products.html" data-ix-text="global.mobileNav.products" data-ix-permission="permissions.showProducts">منتجات</a>
+      <a class="mnItem store" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-text="global.mobileNav.store" data-ix-permission="permissions.showStoreCta">متجر</a>
     </div>
   </div>
 
