--- a/products.html
+++ b/products.html
@@ -959,11 +959,11 @@
   <!-- Mobile bottom nav (mobile only) -->
   <div class="mobileNav" role="navigation" aria-label="تنقل سريع">
     <div class="mobileNavBar">
-      <a class="mnItem" href="index.html" data-ix-text="global.mobileNav.services" data-ix-permission="permissions.showHome">خدمات</a>
-      <a class="mnItem" href="track.html" data-ix-text="global.mobileNav.track" data-ix-permission="permissions.showTrack">تتبع</a>
-      <a class="mnItem" href="returns.html" data-ix-text="global.mobileNav.returns" data-ix-permission="permissions.showReturns">استرجاع</a>
-      <a class="mnItem active" href="products.html" data-ix-text="global.mobileNav.products" data-ix-permission="permissions.showProducts">منتجات</a>
-      <a class="mnItem" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-text="global.mobileNav.store" data-ix-permission="permissions.showStoreCta">متجر</a>
+      <a class="mnItem" href="index.html" data-ix-text="global.mobileNav.services" data-ix-permission="permissions.showHome">الرئيسية</a>
+      <a class="mnItem" href="track.html" data-ix-text="global.mobileNav.track" data-ix-permission="permissions.showTrack">تتبع طلبك</a>
+      <a class="mnItem" href="returns.html" data-ix-text="global.mobileNav.returns" data-ix-permission="permissions.showReturns">الاسترجاع</a>
+      <a class="mnItem active" href="products.html" data-ix-text="global.mobileNav.products" data-ix-permission="permissions.showProducts">المنتجات</a>
+      <a class="mnItem" href="https://infinitex.sa/" target="_blank" rel="noopener" data-ix-href="global.links.store" data-ix-text="global.mobileNav.store" data-ix-permission="permissions.showStoreCta">المتجر الرسمي</a>
     </div>
   </div>
 
